# scan-automate

.devcontainer/: .env.example  compose.yml  devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh
scan-automate/: Cargo.toml  DOCUMENTATION.md  Taskfile.yml
scan-automate/api/: Cargo.toml
scan-automate/api/src/: config.rs  main.rs
scan-automate/crates/api/: Cargo.toml
scan-automate/crates/api/examples/: client.rs  index.html
scan-automate/crates/api/src/: config.rs  errors.rs  lib.rs  main.rs
scan-automate/k8s/apps/: argo-events.yaml  argo-workflows.yaml  cert-manager.yaml  cluster-autoscaler.yaml  kube-prometheus-stack.yaml  metrics-server.yaml  scan-automate.yaml  scan-workflow.yaml
scan-automate/k8s/apps/base/: cluster-autoscaler.yaml  kustomization.yaml  openvasd.yaml  scan-automate.yaml  traefik.yaml
scan-automate/k8s/apps/overlays/eks/: cluster-autoscaler.yaml  kustomization.yaml
scan-automate/k8s/apps/overlays/local/: kustomization.yaml
scan-automate/k8s/helm/openvasd/: values.yaml
scan-automate/k8s/kustomize/argo-events/: kustomization.yaml  rbac.yaml
scan-automate/k8s/kustomize/argo-workflows/: kustomization.yaml  rbac.yaml
scan-automate/k8s/kustomize/argocd/: configmap-patch.yaml  kustomization.yaml
scan-automate/k8s/kustomize/cluster-autoscaler/: cluster-autoscaler-autodiscover.yaml  kustomization.yaml
scan-automate/k8s/kustomize/scan-automate/: deployment.yaml  kustomization.yaml  service.yaml  trigger.yaml  webhook.yaml  workflow-template.yaml
scan-automate/k8s/kustomize/scan-workflow/: kustomization.yaml  trigger.yaml
scan-automate/misc/: consumer.yaml  docker-compose.yml  pvc.yaml
scan-automate/terraform/: .terraform.lock.hcl  main.tf  terraform.tf
