[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
listenfd = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = "0.11.1"
uuid = "1"
tower-http = { version = "0.4.0", features = ["cors"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
