[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main", features = [
    "http2",
    "tracing",
    "multipart",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
listenfd = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"
clap = { version = "4", features = ["env", "derive"] }
once_cell = "1"
lazy_static = "1"
reqwest = "0.11"
